[gd_scene load_steps=6 format=3 uid="uid://5ijv1pynbem1"]

[ext_resource type="PackedScene" uid="uid://1pgodd1iwkfl" path="res://ui/play_menu/map_button/map_button.tscn" id="1_e3poh"]
[ext_resource type="Script" path="res://ui/play_menu/play_menu.gd" id="1_jiyyk"]
[ext_resource type="Resource" uid="uid://d0hxt186ylf3m" path="res://levels/test_level_data.tres" id="3_cxcv0"]

[sub_resource type="LabelSettings" id="LabelSettings_ni0wf"]
font_size = 70
outline_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laujv"]
bg_color = Color(0, 0, 0, 0.196078)

[node name="PlayMenu" type="CanvasLayer"]
script = ExtResource("1_jiyyk")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -543.0
grow_horizontal = 0
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 40.0
offset_top = 32.0
offset_right = 232.0
offset_bottom = 128.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Maps"
label_settings = SubResource("LabelSettings_ni0wf")
uppercase = true

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_top = 63.0
offset_right = -53.0
offset_bottom = 103.0
grow_horizontal = 0
text = "Back"

[node name="PlayButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -105.0
offset_right = -51.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
text = "Play"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 141.0
offset_right = -49.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_laujv")
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MapButton" parent="Panel/ScrollContainer/VBoxContainer" instance=ExtResource("1_e3poh")]
layout_mode = 2
level_data = ExtResource("3_cxcv0")

[node name="MapButton2" parent="Panel/ScrollContainer/VBoxContainer" instance=ExtResource("1_e3poh")]
layout_mode = 2
level_data = ExtResource("3_cxcv0")

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="resized" from="Panel/ScrollContainer" to="." method="_on_scroll_container_resized"]
